trunk/Archive2/bd/fd56a0479ad8d0/output
main.cpp:2:12: warning: 'extern' variable has an initializer [-Wextern-initializer]
extern int data[3] = {3, 6}; //declaration
           ^
main.cpp:4:5: error: redefinition of 'data'
int data[3]; //definition
    ^
main.cpp:2:12: note: previous definition is here
extern int data[3] = {3, 6}; //declaration
           ^
main.cpp:7:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
2 warnings and 1 error generated.
